methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: type mismatch;
 found   : Boolean(false)
 required: com.sun.org.apache.xpath.internal.operations.Bool
  var vuBiscuit:Bool = false
                       ^MethodsReturning:5: error: type mismatch;
 found   : Boolean(true)
 required: com.sun.org.apache.xpath.internal.operations.Bool
      vuBiscuit = true
                  ^